--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
   }
 }
